Initial commit – portfolio

--- a/angular.json
+++ b/angular.json
@@ -53,7 +53,9 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/animate.css/animate.min.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "server": "src/main.server.ts",
             "outputMode": "server",
@@ -121,5 +123,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "eef9c972-d586-407a-9153-afcfcc1a9164"
   }
 }
